--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "0.36.0",
     "@commitlint/config-conventional": "17.4.4",
     "@dcloudio/types": "^3.3.2",
     "@dcloudio/uni-automator": "3.0.0-3081220230817001",
