--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "@vue/tsconfig": "^0.1.3",
     "commitlint": "17.4.4",
     "eslint": "8.36.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.4",
     "husky": "8.0.3",
     "sass": "1.59.2",
     "typescript": "^4.9.4",
